--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -63,6 +63,7 @@
 
   PB_SCA_Sic_Semper_Tyrannis:0 "Sic Semper Tyrannis"
   PB_SCA_Sic_Semper_Tyrannis_2:0 "Sic Semper Tyrannis"
+  PB_SCA_Sic_Semper_Tyrannis_3:0 "Sic Semper Tyrannis"
 
   PB_SCA_Grain_Shortage:0 "Crippling Grain Shortage"
 
@@ -690,11 +691,21 @@
   
   SCA_The_Great_Leap_Forward_tt_3:0 "This national spirit will §GNo Longer§! be removed when we declare war on the [AME.GetFlag] United Commonwealth\n\n"
 
-  SCA_Semper_Tyrannis_tt:0 "\nThis national spirit will be removed when we §GDefeat§! the [AME.GetFlag] United Commonwealth"
+  SCA_Semper_Tyrannis_tt:0 "\nThis national spirit will be removed once we §GDefeat§! the [AME.GetFlag] United Commonwealth"
 
   SCA_Revolution_No_Matter_The_Cost_tt:0 "Choosing this focus makes stabilizing the nation post [AME.GetFlag] United Commonwealth defeat §RExtremely Hard§! to achieve"
 
+  SCA_Honourable_Liberators_tt:0 "Choosing this focus makes stabilizing the nation post [AME.GetFlag] United Commonwealth defeat §GEasy§! to achieve"
+
   SCA_The_Mississippi_Incident_tt:0 "Using local Jacobin collaborators we might be able to spark a §HConfrontation§! between [NDX.GetFlag] §gNew Dixie§! and the [AME.GetFlag] §CUnited Commonwealth§!. Although there is a chance this completly §RBackfires§!."
+
+  SCA_Outlaw_Country_tt:0 "Unlocks: §YCowboy§! £GFX_research_icon Research Tree and £GFX_nato_unit_infantry_icon_small  Unit"
+
+  ##########################
+  # TECH
+  ##########################
+
+  dependencies_x:0 "Unlocks Cowboy Tree"
 
   ##########################
   # EVENTS
