--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -372,3 +372,22 @@
  razormaiden:0 "Razormaidens" 
 
  dependencies_x:0 "Is allowed to research this tech"
+
+ special_forces_cowboys:0 "Cowboys"
+ special_forces_cowboys_desc:0 "The Wild West has been home to hardended criminials since the establishment of the colonial regimes in North America. These gunslingers shoot quick and kill quicker making them effective military units amongst the terrain of the mid-west, even if they are typically just hired guns with little political or moral motivations. Or maybe that’s a benefit?"
+ special_forces_cowboys_1:0 ""
+ special_forces_cowboys_1_desc:0 ""
+ special_forces_cowboys_2:0 ""
+ special_forces_cowboys_2_desc:0 ""
+ special_forces_cowboys_3:0 ""
+ special_forces_cowboys_3_desc:0 ""
+ special_forces_cowboys_4:0 ""
+ special_forces_cowboys_4_desc:0 ""
+ special_forces_cowboys_5:0 ""
+ special_forces_cowboys_5_desc:0 ""
+ special_forces_cowboys_6:0 ""
+ special_forces_cowboys_6_desc:0 ""
+ special_forces_cowboys_7:0 ""
+ special_forces_cowboys_7_desc:0 ""
+ special_forces_cowboys_8:0 ""
+ special_forces_cowboys_8_desc:0 ""
