SCA Work and stuff

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -308,9 +308,9 @@
   #PBNews.80.d:0 "The last capitalist nation in the wild west has been enveloped by the fires of revolution.\n\nThe remnants of the Jacobin revolutionaries of the American Dominon led by Smedley Butler fled west, avoiding the British forces. Many assumed that they would die eventually to native raiding parties and the elements, however they have remained undefeated in their quest to spread the revolution throughought all of America.\n\nWith no further resistance in the West, it seems that the red tide is set to pull the rest of the continent into war like a bloody riptide."
   #PBNews.80.a:0 "A new contender arises"
 
-  PBNews.81.t:0 "A RED AMERICA" #old
-  PBNews.81.d:0 ""
-  PBNews.81.a:0 "Out With The Old, In With The New"
+  PBNews.81.t:0 "RED AMERICA" 
+  PBNews.81.d:0 "It has been settled, one of the most brutal wars to ever face the North American continent has finally come to an end with the defeat of Commonwealth forces by Butler's so called Second Continental Army. From nothing more than a struggling state of angered veterans the SCA has proved itself to be the only power in history to unite the the Wild West and most of North America from the Pacific to the Atlantic. While speculation has been drummed up whether the SCA will be able to restore order to the once Commonwealth owned states many beleive that Butler will face his greatest challenge yet, building the America he promised his people. "
+  PBNews.81.a:0 "And so Butler's dream has finally been achieved"
 
   PBNews.82.t:0 "FRANCE WALKS INTO BREST"
   PBNews.82.d:0 "In a unprecedented violation of previous treaties, the French government has announced its incorporation of Brittany into their motherland. Dissidents of the swift annexation are reportedly being silenced. This move has received condemnation from many, including Germany and The United Kingdom. Many see this violation of previously established treaties as a cause for war, while level heads call for diplomacy. In spite of this some are ambivalent to this development in Western Europe. What this could mean next for the people of France or the wider world is currently unknown, yet it seems grim for advocates of peace and pacifism."  
