--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -67,6 +67,8 @@
 
   PB_SCA_Grain_Shortage:0 "Crippling Grain Shortage"
 
+  PB_SCA_Fear_And_Chaos:0 "Fear And Chaos"
+
   ##########################
   # TECHNICAL TEAMS
   ##########################
@@ -112,7 +114,8 @@
   decision_cost_5_stability:0 "£stability_texticon  §Y5§!"
   decision_cost_5_stability_blocked:0 "£stability_texticon  §R5§!"
   SCA_Stabilize_The_Nation:0 "Stabilize The Nation"
-  SCA_Recruit_Cowboys:0 "Recruit Cowboys"
+  SCA_Reveal_Ourselves:0 "Reveal Ourselves"
+  SCA_Reveal_Ourselves_desc:0 "The time has come to reveal ourselves to the United Commonwealth and avenge the failed revolution."
 
   PB_SCA_The_Great_Leap_Forward:0 "The Great Leap Forward"
   PB_SCA_The_Great_Leap_Forward_desc:0 "\n\n\n\n\n\nIf we plan to reclaim America then we must surpass its undeniable industrial advantage over our state. New factories, mines, and such will need to be immediatly expanded upon if we ever wish to see victory over Philedphia."
@@ -615,7 +618,7 @@
 
   SCA28tooltip:0 "The '§YWith Open Eyes§!' Misson Timer Will Be Reset"
 
-  SCA29tooltip:0 "§RTHIS WILL LEAD TO WAR!§!"
+  SCA29tooltip:0 "§RThis National Spirit can only be removed when we defeat the United Commonwealth!§!\n"
 
   All_Thats_Left:0 "The Last Wave Has Arrived"
 
@@ -693,6 +696,8 @@
 
   SCA_Semper_Tyrannis_tt:0 "\nThis national spirit will be removed once we §GDefeat§! the [AME.GetFlag] United Commonwealth"
 
+  SCA_Semper_Tyrannis_2_tt:0 "\nThis decision will allows us to reveal ourselves and declare war on the United Commonwealth should be meet the required conditions"
+
   SCA_Revolution_No_Matter_The_Cost_tt:0 "Choosing this focus makes stabilizing the nation post [AME.GetFlag] United Commonwealth defeat §RExtremely Hard§! to achieve"
 
   SCA_Honourable_Liberators_tt:0 "Choosing this focus makes stabilizing the nation post [AME.GetFlag] United Commonwealth defeat §GEasy§! to achieve"
@@ -700,6 +705,10 @@
   SCA_The_Mississippi_Incident_tt:0 "Using local Jacobin collaborators we might be able to spark a §HConfrontation§! between [NDX.GetFlag] §gNew Dixie§! and the [AME.GetFlag] §CUnited Commonwealth§!. Although there is a chance this completly §RBackfires§!."
 
   SCA_Outlaw_Country_tt:0 "Unlocks: §YCowboy§! £GFX_research_icon Research Tree and £GFX_nato_unit_infantry_icon_small  Unit"
+
+  SCA_Reveal_Ourselves_tt:0 "Has united the Wild West and shares a border with the United Commonwealth"
+  SCA_Reveal_Ourselves_2_tt:0 "Is the last Wild West nation and shares a border with the United Commonwealth"
+  SCA_Reveal_Ourselves_3_tt:0 "The Sleeping Giant mechanic will come to an end"
 
   ##########################
   # TECH
