--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -374,20 +374,21 @@
  dependencies_x:0 "Is allowed to research this tech"
 
  special_forces_cowboys:0 "Cowboys"
+ cat_cowboys:0 "Cowboys"
  special_forces_cowboys_desc:0 "The Wild West has been home to hardended criminials since the establishment of the colonial regimes in North America. These gunslingers shoot quick and kill quicker making them effective military units amongst the terrain of the mid-west, even if they are typically just hired guns with little political or moral motivations. Or maybe that’s a benefit?"
- special_forces_cowboys_1:0 ""
- special_forces_cowboys_1_desc:0 ""
- special_forces_cowboys_2:0 ""
- special_forces_cowboys_2_desc:0 ""
- special_forces_cowboys_3:0 ""
- special_forces_cowboys_3_desc:0 ""
- special_forces_cowboys_4:0 ""
- special_forces_cowboys_4_desc:0 ""
- special_forces_cowboys_5:0 ""
- special_forces_cowboys_5_desc:0 ""
- special_forces_cowboys_6:0 ""
- special_forces_cowboys_6_desc:0 ""
- special_forces_cowboys_7:0 ""
- special_forces_cowboys_7_desc:0 ""
- special_forces_cowboys_8:0 ""
- special_forces_cowboys_8_desc:0 ""
+ special_forces_cowboys_1:0 "8-Shot Revolvers"
+ special_forces_cowboys_1_desc:0 "The bigger the cylinder the more lead that can enter our enemies skull, its simple math really."
+ special_forces_cowboys_2:0 "Dedicated Supply Wagons"
+ special_forces_cowboys_2_desc:0 "With our reliance on these hired guns increasing as the days go by it has become increasingly neccesary that the state provides these units with munitions and rations."
+ special_forces_cowboys_3:0 "Engineer Teams"
+ special_forces_cowboys_3_desc:0 "Many cowboys lack basic defense building materials, some don't even have shovels. Let us correct this wrong and provide them with what they desperately need."
+ special_forces_cowboys_4:0 "XL Water Packs"
+ special_forces_cowboys_4_desc:0 "Canteens simply can't hold enough water to sustain our cowboys amongst the brutal heat of the American Mid-West, larger Water Packs will be neccesary if we plan on maintaining large numbers of Cowboys."
+ special_forces_cowboys_5:0 "Makeshift AP Rounds"
+ special_forces_cowboys_5_desc:0 "While the Wild West is home to many makeshift materials none are more popular than the American made AP rounds, of which originate somewhere around Boomtown. These bullets pack a bigger punch than the standard calibre and can easily penetrate thin armour types."
+ special_forces_cowboys_6:0 "Looter Teams"
+ special_forces_cowboys_6_desc:0 "By establishing dedicated 'looter' teams our hired guns will be more efficient in raiding urban settlements and even major cities."
+ special_forces_cowboys_7:0 "Kelly Armour"
+ special_forces_cowboys_7_desc:0 "The enduring legacy of Ned Kelly has fruited various advancements in Cowboy military technology. The most influential advancement that Kelly offered the Wild West was his signature metal plated armour, something that has become widely adopted throughout the Wild West."
+ special_forces_cowboys_8:0 "Promote Cavarly Tactics"
+ special_forces_cowboys_8_desc:0 "Many gunslingers travel on horseback but there efficiency is questionable at best, at least in terms of discipline. We can integrate their love of speed with traditional cavarly tactics to make them a formidable force."
