--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -696,7 +696,7 @@
 
   SCA_Semper_Tyrannis_tt:0 "\nThis national spirit will be removed once we §GDefeat§! the [AME.GetFlag] United Commonwealth"
 
-  SCA_Semper_Tyrannis_2_tt:0 "\nThis decision will allows us to reveal ourselves and declare war on the United Commonwealth should be meet the required conditions"
+  SCA_Semper_Tyrannis_2_tt:0 "\nThis decision will allows us to reveal ourselves and declare war on the United Commonwealth should we meet the required conditions"
 
   SCA_Revolution_No_Matter_The_Cost_tt:0 "Choosing this focus makes stabilizing the nation post [AME.GetFlag] United Commonwealth defeat §RExtremely Hard§! to achieve"
 
@@ -709,6 +709,8 @@
   SCA_Reveal_Ourselves_tt:0 "Has united the Wild West and shares a border with the United Commonwealth"
   SCA_Reveal_Ourselves_2_tt:0 "Is the last Wild West nation and shares a border with the United Commonwealth"
   SCA_Reveal_Ourselves_3_tt:0 "The Sleeping Giant mechanic will come to an end"
+
+  SCA_Peace_Cap_One:0 "You can only attempt to be peaceful with one nation"
 
   ##########################
   # TECH
@@ -768,6 +770,10 @@
   SCA10title:0 "Our Demands Were Accepted"
   SCA10desc:0 "" 
   SCA10opta:0 "Good"
+
+  SCA11title:0 "The SCA Is Meddling With Our Internal Politics"
+  SCA11desc:0 "" 
+  SCA11opta:0 "What!"
 
 
   
