Wild West stuff

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -846,6 +846,10 @@
   PBNews.214.d:0 "In Carnegia, scientists supported by the Edison Electric Company and Carnegie Steel successfully launched a small payload rocket into the atmosphere. Though the rocket unfortunately burnt up on re-entry, the initial success of the event has rocked the scientific community.\n\nBoth Britain and Russia have announced their plans to establish formal space programs, vowing to outdo the other in the race to achieve scientific dominance. Many fear, however, the prospect of militarizing orbit may have deadly consequences."
   PBNews.214.a:0 "This will have major consequences."
 
+  PBNews.215.t:0 "THE FREE REPUBLIC OF KELLY"
+  PBNews.215.d:0 "Kelly and his gang of misfits have achieved the unspeakable. From starting off as nothing more than a collection of rural backwater towns this group of gunslingers have managed to unite the entirety of the Great American plains. Many are in disbelief in how such a group could be the ones to unite the Wild West under one flag and one man. No comment has been made by the Commonwealth but many speculate the UC is readying itself for an intervention in Earth's last bastion of heavenly nature."
+  PBNews.215.a:0 "The Wild West seemingly endures another century."
+
 
   
 
