--- a/localisation/english/PB_WWW_l_english.yml
+++ b/localisation/english/PB_WWW_l_english.yml
@@ -7,6 +7,7 @@
   PB_WWW_The_Wild_West:0 "The Wild Wild West"
   PB_WWW_The_Wild_West_desc:0 "\n\n\n\n\n\nThe Wild Wild West"
   PB_Attack_NRT:0 "Attack [NRT.GetName]"
+  PB_Attack_NDX:0 "Attack [NDX.GetName]"
   PB_Attack_MRN:0 "Attack [MRN.GetName]"
   PB_Attack_OSA:0 "Attack [OSA.GetName]"
   PB_Attack_GRN:0 "Attack [GRN.GetName]"
@@ -27,6 +28,7 @@
 
   ## Formables
   WWW_IRO_Tier_One:0 "Form the State of Kelly"
+  WWW_IRO_Tier_Two:0 "Form the Free Republic of Kelly"
 
   ##########################
   # FLAGS AND TOOLTIPS
@@ -34,6 +36,11 @@
 
   WWW_Recently_Declared_War_flag_tt:0 "Current days are: [?WWW_Recently_Declared_War_flag:days|Y0]"
   WWW_Recently_Declared_War_flag:0 "Has not been at war in the last 40 days"
+
+  IRO_State_Of_Kelly:0 "§HKelly§! will be known as the §HState of Kelly§!"
+  IRO_Republic_Of_Kelly:0 "§HState of Kelly§! will be known as the §HFree Republic of Kelly§!"
+  IRO_Tier_1_Formed:0 "Has formed the §HState of Kelly§!"
+  
 
   ##########################
   # COSMETIC
@@ -65,3 +72,28 @@
   IRO_1_ds_ADJ:0 "Trekker"
   IRO_1_cn_ADJ:0 "Trekker"
   IRO_1_an_ADJ:0 "Trekker"
+
+  IRO_2_ni:0 "Free Republic of Kelly"
+  IRO_2_ni_DEF:0 "Free Republic of Kelly"
+  IRO_2_ds:0 "Free Republic of Kelly"
+  IRO_2_ds_DEF:0 "Free Republic of Kelly"
+  IRO_2_rc:0 "Free Republic of Kelly"
+  IRO_2_rc_DEF:0 "Free Republic of Kelly"
+  IRO_2_an:0 "Free Republic of Kelly"
+  IRO_2_an_DEF:0 "Free Republic of Kelly"
+  IRO_2_cn:0 "Free Republic of Kelly"
+  IRO_2_cn_DEF:0 "Free Republic of Kelly"
+  IRO_2_lb:0 "Free Republic of Kelly"
+  IRO_2_lb_DEF:0 "Free Republic of Kelly"
+  IRO_2_ss:0 "Free Republic of Kelly"
+  IRO_2_ss_DEF:0 "Free Republic of Kelly"
+  IRO_2_jc:0 "Free Republic of Kelly"
+  IRO_2_jc_DEF:0 "Trekker"
+  IRO_2_ni_ADJ:0 "Trekker"
+  IRO_2_rc_ADJ:0 "Trekker"
+  IRO_2_lb_ADJ:0 "Trekker"
+  IRO_2_ss_ADJ:0 "Trekker"
+  IRO_2_jc_ADJ:0 "Trekker"
+  IRO_2_ds_ADJ:0 "Trekker"
+  IRO_2_cn_ADJ:0 "Trekker"
+  IRO_2_an_ADJ:0 "Trekker"
