Queen  Victoria added, more UK voicelines, WW changes

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -850,6 +850,10 @@
   PBNews.215.d:0 "Kelly and his gang of misfits have achieved the unspeakable. From starting off as nothing more than a collection of rural backwater towns this group of gunslingers have managed to unite the entirety of the Great American plains. Many are in disbelief in how such a group could be the ones to unite the Wild West under one flag and one man. No comment has been made by the Commonwealth but many speculate the UC is readying itself for an intervention in Earth's last bastion of heavenly nature."
   PBNews.215.a:0 "The Wild West seemingly endures another century."
 
+  PBNews.216.t:0 "CRISIS IN THE KREMLIN"
+  PBNews.216.d:0 "Earlier today, the Russian capital of St. Petersburg was rocked by a massive explosion during a military parade. According to some reports, the detonation was intense enough to shatter windows as far as Kotka. Investigations are ongoing, as are rescue and relief efforts by the Russian government.\n\nEarly reports indicate that the device may have been an experimental teleforce bomb, lining up with a recent convoy raid in Russian occupied Galicia. With fires still burning in the city, the only question left to ask is who, and why?"
+  PBNews.216.a:0 "We must condemn such actions"
+
 
   
 
