--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -374,6 +374,7 @@ PB_Plutocrats:0 "Plutocrat"
 ##########################
 PB_Authoritarian_Sympathies:0 "Authoritarian Sympathies"
 PB_Puppet_King:0 "Puppet King"
+PB_Empress_Eternal:0 "Empress Eternal"
 
 ##########################
 # TECH TEAMS
