More Wild West stoof

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -852,7 +852,15 @@
 
   PBNews.216.t:0 "CRISIS IN THE KREMLIN"
   PBNews.216.d:0 "Earlier today, the Russian capital of St. Petersburg was rocked by a massive explosion during a military parade. According to some reports, the detonation was intense enough to shatter windows as far as Kotka. Investigations are ongoing, as are rescue and relief efforts by the Russian government.\n\nEarly reports indicate that the device may have been an experimental teleforce bomb, lining up with a recent convoy raid in Russian occupied Galicia. With fires still burning in the city, the only question left to ask is who, and why?"
-  PBNews.216.a:0 "We must condemn such actions"
+  PBNews.216.a:0 "We must condemn such actions."
+
+  PBNews.217.t:0 "THE EMPIRE OF NORTON"
+  PBNews.217.d:0 "Today Norton III, Emperor of the American people, had proclaimed the establishment of the Norton Empire. The special occasion was marked by public celebrations consisting of primarily military parades. Originally a mere backwater kingdom this so called American Imperial Army has conquered its way to relevance. The Question now remains whether Norton III will continue this ambitious streak of his or whether he will now take the time to consolidate his newly founded empire. Only time can tell. "
+  PBNews.217.a:0 "Even the Americans can't escape the lure of monarchy."
+
+  PBNews.218.t:0 "THE PACIFIC STATES OF AMERICA"
+  PBNews.218.d:0 "Robert Wood and his followers have managed, against all odds, to unite the American people. This new nation now to be officially called the Pacific States of America has been partly established in the memory of George Washington. While the United Commonwealth has made no comment on the matter many are wondering what relationship these two nations will develop in the near future seeing that Robert and his followers are staunchly opposed to the current ruling system in Philly. Nobody knows but many are weary it may lead to war."
+  PBNews.218.a:0 "Washington's legacy lives on."
 
 
   
