--- a/localisation/english/PB_WWW_l_english.yml
+++ b/localisation/english/PB_WWW_l_english.yml
@@ -13,7 +13,6 @@
   PB_Attack_GRN:0 "Attack [GRN.GetName]"
   PB_Attack_CMC:0 "Attack [CMC.GetName]"
   PB_Attack_STA:0 "Attack [STA.GetName]"
-  PB_Attack_SFE:0 "Attack [SFE.GetName]"
   PB_Attack_DER:0 "Attack [DER.GetName]"
   PB_Attack_APA:0 "Attack [APA.GetName]"
   PB_Attack_SHO:0 "Attack [SHO.GetName]"
@@ -30,6 +29,12 @@
   WWW_IRO_Tier_One:0 "Form the State of Kelly"
   WWW_IRO_Tier_Two:0 "Form the Free Republic of Kelly"
 
+  WWW_NRT_Tier_One:0 "Form the Greater Kingdom of Norton"
+  WWW_NRT_Tier_Two:0 "Form the Empire of Norton"
+
+  WWW_TAC_Tier_One:0 "Form the Republic of Liberty"
+  WWW_TAC_Tier_Two:0 "Form the Pacific States of America"
+
   ##########################
   # FLAGS AND TOOLTIPS
   ##########################
@@ -40,7 +45,14 @@
   IRO_State_Of_Kelly:0 "§HKelly§! will be known as the §HState of Kelly§!"
   IRO_Republic_Of_Kelly:0 "§HState of Kelly§! will be known as the §HFree Republic of Kelly§!"
   IRO_Tier_1_Formed:0 "Has formed the §HState of Kelly§!"
+
+  NRT_Greater_Kingdom_of_Norton:0 "§HKingdom of Norton§! will be known as the §HGreater Kingdom of Norton§!"
+  NRT_Empire_Of_Norton:0 "§HGreater Kingdom of Norton§! will be known as the §HEmpire Of Norton§!"
+  NRT_Tier_1_Formed:0 "Has formed the §HGreater Kingdom of Norton§!"
   
+  TAC_Republic_of_Liberty:0 "§HNew Virginia§! will be known as the §HRepublic of Liberty§!"
+  TAC_Pacific_States_of_America:0 "§HRepublic of Liberty§! will be known as the §HPacific States of America§!"
+  TAC_Tier_1_Formed:0 "Has formed the §HRepublic of Liberty§!"
 
   ##########################
   # COSMETIC
@@ -48,52 +60,31 @@
 
   ## IRO 
   
-  IRO_1_ni:0 "State of Kelly"
-  IRO_1_ni_DEF:0 "State of Kelly"
-  IRO_1_ds:0 "State of Kelly"
-  IRO_1_ds_DEF:0 "State of Kelly"
-  IRO_1_rc:0 "State of Kelly"
-  IRO_1_rc_DEF:0 "State of Kelly"
-  IRO_1_an:0 "State of Kelly"
-  IRO_1_an_DEF:0 "State of Kelly"
-  IRO_1_cn:0 "State of Kelly"
-  IRO_1_cn_DEF:0 "State of Kelly"
-  IRO_1_lb:0 "State of Kelly"
-  IRO_1_lb_DEF:0 "State of Kelly"
-  IRO_1_ss:0 "State of Kelly"
-  IRO_1_ss_DEF:0 "State of Kelly"
-  IRO_1_jc:0 "State of Kelly"
-  IRO_1_jc_DEF:0 "Trekker"
-  IRO_1_ni_ADJ:0 "Trekker"
-  IRO_1_rc_ADJ:0 "Trekker"
-  IRO_1_lb_ADJ:0 "Trekker"
-  IRO_1_ss_ADJ:0 "Trekker"
-  IRO_1_jc_ADJ:0 "Trekker"
-  IRO_1_ds_ADJ:0 "Trekker"
-  IRO_1_cn_ADJ:0 "Trekker"
-  IRO_1_an_ADJ:0 "Trekker"
+  IRO_1:0 "State of Kelly"
+  IRO_1_DEF:0 "State of Kelly"
+  IRO_1_ADJ:0 "Trekker"
 
-  IRO_2_ni:0 "Free Republic of Kelly"
-  IRO_2_ni_DEF:0 "Free Republic of Kelly"
-  IRO_2_ds:0 "Free Republic of Kelly"
-  IRO_2_ds_DEF:0 "Free Republic of Kelly"
-  IRO_2_rc:0 "Free Republic of Kelly"
-  IRO_2_rc_DEF:0 "Free Republic of Kelly"
-  IRO_2_an:0 "Free Republic of Kelly"
-  IRO_2_an_DEF:0 "Free Republic of Kelly"
-  IRO_2_cn:0 "Free Republic of Kelly"
-  IRO_2_cn_DEF:0 "Free Republic of Kelly"
-  IRO_2_lb:0 "Free Republic of Kelly"
-  IRO_2_lb_DEF:0 "Free Republic of Kelly"
-  IRO_2_ss:0 "Free Republic of Kelly"
-  IRO_2_ss_DEF:0 "Free Republic of Kelly"
-  IRO_2_jc:0 "Free Republic of Kelly"
-  IRO_2_jc_DEF:0 "Trekker"
-  IRO_2_ni_ADJ:0 "Trekker"
-  IRO_2_rc_ADJ:0 "Trekker"
-  IRO_2_lb_ADJ:0 "Trekker"
-  IRO_2_ss_ADJ:0 "Trekker"
-  IRO_2_jc_ADJ:0 "Trekker"
-  IRO_2_ds_ADJ:0 "Trekker"
-  IRO_2_cn_ADJ:0 "Trekker"
-  IRO_2_an_ADJ:0 "Trekker"
+
+  IRO_2:0 "Free Republic of Kelly"
+  IRO_2_DEF:0 "Free Republic of Kelly"
+  IRO_2_ADJ:0 "Trekker"
+
+  ## NRT
+
+  NRT_1:0 "Greater Kingdom of Norton"
+  NRT_1_DEF:0 "Greater Kingdom of Norton"
+  NRT_1_ADJ:0 "Trekker"
+
+  NRT_2:0 "Norton Empire"
+  NRT_2_DEF:0 "Norton Empire"
+  NRT_2_ADJ:0 "Trekker"
+
+  ## TAC
+
+  TAC_1:0 "Republic of Liberty"
+  TAC_1_DEF:0 "Republic of Liberty"
+  TAC_1_ADJ:0 "Trekker"
+
+  TAC_2:0 "Pacific States of America"
+  TAC_2_DEF:0 "Pacific States of America"
+  TAC_2_ADJ:0 "Trekker"
