--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -8593,8 +8593,8 @@ SAN_an_ADJ:0 "Indian"
  IRO_DEF:0 "The Kelly Gang Territory"
  IRO_ADJ:0 "Kelly"
 
- NRT:0 "Norton Empire"
- NRT_DEF:0 "The Glorious Norton Empire"
+ NRT:0 "Norton Kingdom"
+ NRT_DEF:0 "The Glorious Norton Kingdom"
  NRT_ADJ:0 "Imperial"
 
  GRN:0 "Grangerland"
