Quebec and Walloon generals/leaders

--- a/localisation/english/PB_Quebec_l_english.yml
+++ b/localisation/english/PB_Quebec_l_english.yml
@@ -8,10 +8,23 @@
   # PARTIES
   ##########################
 
+  QUE_cn_party:0 "PC"
+  QUE_cn_party_long:0 "Parti Conservateur"
+  QUE_lb_party:0 "ALN"
+  QUE_lb_party_long:0 "Action Libérale Nationale"
+  QUE_ss_party:0 "PP"
+  QUE_ss_party_long:0 "Parti Populaire"
+  QUE_jc_party:0 "LN"
+  QUE_jc_party_long:0 "Ligue Nationaliste"
+  QUE_rc_party:0 "-"
+  QUE_ni_party:0 "PTC"
+  QUE_ni_party_long:0 "Parti Travailliste Chrétien"
+  QUE_ds_party:0 "-"
+  QUE_an_party:0 "-"
+
   ##########################
   # EVENTS
   ##########################
-
 
   ##########################
   # IDEAS
