Small push before a bunch of bugfixes

--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -644,7 +644,7 @@
 
   SCA_Our_Great_March_East_tt:0 "The Sic Semper Tyrannis §YFocus Tree§! will load which grants:\n\n£GFX_decision_icon_small Decisions to declare war on specific Minor American countries\n\n£GFX_decision_icon_small Decisions to majorly expand the nations economy\n\n£GFX_decision_icon_small Decisions to prepare for the war with the  [AME.getflag] United Commonwealth\n\nThere are certain path unique decisions and mechanics"
   
-  SCA_A_Truly_American_Revolution_tt:0 "The The All-American Reclamation Committee §YFocus Tree§! will load which grants:\n\n£GFX_decision_icon_small Decisions to declare war on specific Minor American countries\n\n£GFX_decision_icon_small Decisions to majorly expand the nations economy\n\n£GFX_decision_icon_small Decisions to prepare for the war with the  [AME.getflag] United Commonwealth\n\nThere are certain path unique decisions and mechanics"
+  SCA_A_Truly_American_Revolution_tt:0 "The The All-American Reclamation Committee §YFocus Tree§! will load which grants:\n\n£GFX_decision_icon_small Decisions to declare war on specific Minor American countries\n\n£GFX_decision_icon_small Decisions to majorly expand the nations economy\n\n£GFX_decision_icon_small Decisions to prepare for the war with the  [AME.getflag] United Commonwealth\n\nDepending on whether you chose the Dawn of the People's Council focus or the Butlerite Proclamation focus you will get different post-unification trees."
 
   SCA_Hide_From_The_Giant_tt:0 "The £GFX_decision_icon_small §YHide From The Giant§! Decision cost is now calculated by the number of £GFX_manpower_texticon  Divisions you have mobilized instead of the number of £GFX_manpower_texticon  Battalions"
   
