Rio Grande Love

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -960,3 +960,6 @@
  VICTORY_POINTS_12461:0 "Ensenada"
  VICTORY_POINTS_13280:0 "Coatzacoalcos"
  VICTORY_POINTS_10740:0 "El Paso del Libertad"
+ VICTORY_POINTS_6785:0 "Corpus Christi"
+ VICTORY_POINTS_5015:0 "Matamoros"
+ VICTORY_POINTS_2060:0 "Nuevo Laredo"
