--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -963,3 +963,6 @@
  VICTORY_POINTS_6785:0 "Corpus Christi"
  VICTORY_POINTS_5015:0 "Matamoros"
  VICTORY_POINTS_2060:0 "Nuevo Laredo"
+ VICTORY_POINTS_2008:0 "León de los Aldama"
+ VICTORY_POINTS_5021:0 "Tampico"
+ VICTORY_POINTS_4908:0 "Guaymas"
