--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -336,8 +336,11 @@
   trait_SCA_United_By_Ideology_desc:0 ""
   trait_SCA_Traumatized_By_The_Trek:0 "Traumatized By The Trek"
   trait_SCA_Traumatized_By_The_Trek_desc:0 "This general has seen the worst of the worst of our march west, many have died and for those that have made it, reports of Shell Shock are far from uncommon. The sight of corpses littering the path back to Philadelphia has done more mental damage than the UC could ever hope to military inflict, our people are tired, battered, and bruised. "
+  trait_SCA_Defected_From_The_UC:0 "Defected From the UC"
+  trait_SCA_Defected_From_The_UC_desc:0 ""
 
   PB_Revolutionary_With_A_Heart:0 "Revolutionary With A Heart"
+  PB_Revolutionary_With_A_Heart_desc:0 ""
 
   ##########################
   # FOCUS
@@ -399,31 +402,31 @@
   # Second Continental Army - Exile Two
 
   SCA_The_First_American_Congress:0 "The First American Congress"
-  SCA_The_First_American_Congress_desc:0 ""
+  SCA_The_First_American_Congress_desc:0 "Like our forefathers before us, we have been beaten and have beaten, broken and have broken. Our continental armies are tired and some rest is needed before the revolution fires up again. This morale pause can be followed up with the furthering of our political goal through a temporary congress, bringing any mind that is available to the centre of our republic and bring a people's answer to how the state must function. Butler has given this congress total authority over the fate of the coming republic and as the people gather, the Continental Army braces itself for its second chapter."
 
   SCA_The_Butlerite_Proclamation:0 "The Butlerite Proclamation"
-  SCA_The_Butlerite_Proclamation_desc:0 ""
+  SCA_The_Butlerite_Proclamation_desc:0 "No council has ever held a revolution together, its petty squabbles hindering the bigger picture of revolutionary needs. Instead of a dumb, bureaucratic solution that will hinder us in the future, the Congress has put their support behind the presidency, empowering it as the president should be the office that can only represent the people. Without the liberal dreams of division of power, the presidency can formulate the true, uncensored and unsalted opinion of the American people. Butler will be an amazing first President!"
 
   SCA_Dawn_Of_The_Peoples_Council:0 "Dawn Of The People's Council"
   SCA_Dawn_Of_The_Peoples_Council_desc:0 ""
 
   SCA_Rapid_Industrialization:0 "Rapid Industrialization"
-  SCA_Rapid_Industrialization_desc:0 ""
+  SCA_Rapid_Industrialization_desc:0 "Though our spirits may be strong, our industry is not. The industry of the lands we control pales in comparison to those in the west, while we will never be able to match them with the resources we have, we can still wake use of what we've got. We must clear space for more factories to supply arms to our soldiers and goods for our people. The factories that already exist must be expanded and their output increased. If we can manage this, our revolution will have the industrial backing to win. It won't be easy, nor will it be cheap. But it will give us the chance we need to secure victory."
 
   SCA_Fire_Up_The_Steelworks:0 "Fire Up The Steelworks"
-  SCA_Fire_Up_The_Steelworks_desc:0 ""
+  SCA_Fire_Up_The_Steelworks_desc:0 "As the American Revolution turns the cogs across the continent, our domestic cogs remain rusty. Industrial output has been lagging behind without the proper resources, which most importantly include steel. As long as we lack steel, our arms will suffer in quality and our industry will be unable to properly maintain itself, threatening the very core of the revolution: its workers. Decrees have thus been signed that seek to expand the steel works we own through the purchasing of a handful of new smelters from friendly nations and expand the logistical miracle that keeps the hot metal burning."
 
   SCA_Centralize_The_Administration:0 "Centralize The Administration"
   SCA_Centralize_The_Administration_desc:0 ""
 
   SCA_Establish_A_Professional_Fighting_Corps:0 "Establish A Professional Fighting Corps"
-  SCA_Establish_A_Professional_Fighting_Corps_desc:0 ""
+  SCA_Establish_A_Professional_Fighting_Corps_desc:0 "Since our great Trek into the Wild West, the Continental Army has been made up of irregulars: loyal souls without any prior experience in combat, nor with the right equipment to face any modern force. As we continue to march towards the Atlantic and start to border the fringes of the British Empire, the need to modernise our forces grows. While our militia are rugged and battle-hardened, they lack the professionalism of a modern army. Traits of discipline, cohesion and communication need to be drilled into our men if we want to win this war."
   
   SCA_Setup_The_Ministries:0 "Setup The Ministries"
   SCA_Setup_The_Ministries_desc:0 ""
 
   SCA_The_Peoples_Army:0 "The People's Army"
-  SCA_The_Peoples_Army_desc:0 ""
+  SCA_The_Peoples_Army_desc:0 "We will reignite the spirit of our forefathers, relive the memories of the first revolution and lead it into glorious victory! But we cannot secure our freedom through words, they must be secured through arms. And to do that, we need an Army. Right now, what little we have consists of local militias. Though some have called for us to centralise and professionalise our military, we cannot do this. If we allow the power of the military to fall into a handful of people, we risk our revolution being betrayed. No, this will not be an army of soldiers, it will be an army of the people! What we lack in men and arms, we can make up for with our spirit! Victory will be won with the People's hands!"
 
   SCA_The_Washington_Monument:0 "The Washington Monument"
   SCA_The_Washington_Monument_desc:0 ""
@@ -444,7 +447,7 @@
   SCA_Our_Great_March_East_desc:0 ""
 
   SCA_A_Truly_American_Revolution:0 "A Truly American Revolution"
-  SCA_A_Truly_American_Revolution_desc:0 ""
+  SCA_A_Truly_American_Revolution_desc:0 "We've done it. Our territory is secured, the people stand rallied to the cause. We have expanded and made use of our limited industry to provide us the arms needed to fight. And our military stands ready for war. Now we must prepare for the next chapter of our cause. We are surrounded by other smaller nations in this untamed and wild land. Some can be brought into the revolution with words, others with guns. Whatever the result, we must secure the resources that surround us and liberate the people under the thumbs of their warlords. Then and only then, will we manifest our destiny to liberate the West and avenge the failure of 1776. We will march into victory and freedom! For the Revolution!"
 
   # Second Continental Army - Exile THREE (CONGRESS)
 
@@ -778,6 +781,10 @@
   SCA11title:0 "The SCA Is Meddling With Our Internal Politics"
   SCA11desc:0 "" 
   SCA11opta:0 "What!"
+
+  SCA12title:0 "Defection in our ranks!"
+  SCA12desc:0 "" 
+  SCA12opta:0 "What!"
 
 
   
