Another Wild West Push

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -862,6 +862,14 @@
   PBNews.218.d:0 "Robert Wood and his followers have managed, against all odds, to unite the American people. This new nation now to be officially called the Pacific States of America has been partly established in the memory of George Washington. While the United Commonwealth has made no comment on the matter many are wondering what relationship these two nations will develop in the near future seeing that Robert and his followers are staunchly opposed to the current ruling system in Philly. Nobody knows but many are weary it may lead to war."
   PBNews.218.a:0 "Washington's legacy lives on."
 
+  PBNews.219.t:0 "THE UNITED PROVINCES"
+  PBNews.219.d:0 "In a shock to all the once seemingly irrelevant Cantonese nation of Meizhou has united the entirety of the Wild West. While many Europeans remain doubtful of such a fact Philadelphia has confirmed such a reality to be true. Already reports of mass migration from China to the United Provinces is well under way and many are now wondering what the ethno-linguistic future of the United Provinces of the Pacific is to be. Many Trekkers now fear that they are soon to be replaced or expelled from these once uncivilized lands by Meizhou authorities."
+  PBNews.219.a:0 "Never would I have thought."
+
+  PBNews.220.t:0 "REPUBLIC OF WEST AZTLAN"
+  PBNews.220.d:0 "Nevada against all odds has managed to bring the light of civilization to the divided nations of the Wild West. Many are surprised to see this once Mexican rump state ascend to relvance on the North American continent. What the future holds for the newly proclaimed Republic of West Aztlan nobody knows for sure. Both the United Commonwealth and Mexico have remained silent on this ground-breaking news, but many intellectuals believe war is bound to break out at some point in the foreseeable future. The question then is who will remain standing?"
+  PBNews.220.a:0 "The Mojave conquers all."
+
 
   
 
