--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -870,8 +870,17 @@
   PBNews.220.d:0 "Nevada against all odds has managed to bring the light of civilization to the divided nations of the Wild West. Many are surprised to see this once Mexican rump state ascend to relvance on the North American continent. What the future holds for the newly proclaimed Republic of West Aztlan nobody knows for sure. Both the United Commonwealth and Mexico have remained silent on this ground-breaking news, but many intellectuals believe war is bound to break out at some point in the foreseeable future. The question then is who will remain standing?"
   PBNews.220.a:0 "The Mojave conquers all."
 
+  PBNews.221.t:0 "FORMATION OF NEW AFRICA"
+  PBNews.221.d:0 "Today in the city of Des Moines the Marooner head of state, Robert Abbott, proclaimed to a large audience that the birth of a new American state was to take place today. The United States of New Africa would now bear the responsibility of bringing democracy and civilization to the Wild West. Both the United Commonwealth and Mexico have made no comment on the matter, but rumours have spread that many southern provinces within the UC have become agitated by these recent developments. The future of North America still remains unclear though."
+  PBNews.221.a:0 "A voice for all Americans no matter their race or creed."
 
-  
+  PBNews.222.t:0 "GREAT PLAINS COMMONWEALTH"
+  PBNews.222.d:0 "Once nothing more than a state of disgruntled Commonwealth farmers, Grangerland, now officially known as the Great Plains Commonwealth, has come to unite the entirety of the Wild West. How they achieved such a feat still remains a mystery, but many are well convinced that the Great Plains Commonwealth still has every intention to continue its fight against the oppression of all agricultural workers, to whom they would view their next target to be nobody truly knows. While the stability of the nation has been put to question many are confident that the Wild West will certainly become a whole lot less wild."
+  PBNews.222.a:0 "If the dirt could talk it would speak a million words."
+
+  PBNews.223.t:0 "THE FIRST NATIONS"
+  PBNews.223.d:0 "Against all odds the Confederacy of Free Tribes has united with the remaining native American tribes in the Wild West to form what is now known as the Confederation of the First Nations. What the future is to be of local trekker and other non-native populations is unknown, but rumour has it that the Confederation of the First Nations is making diplomatic efforts to evict these non-native populations back to their countries of origin and reinstate local tribal groups. Beyond this not much is known of the intentions of this new state, if it even has any that is."
+  PBNews.223.a:0 "Like a Phoenix from the ashes."
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
