--- a/localisation/english/PB_Generic_Decisions_l_english.yml
+++ b/localisation/english/PB_Generic_Decisions_l_english.yml
@@ -146,14 +146,21 @@
   OBW_Has_150_RP_cost_tt:0 "§C150§!£research_points_small"
   OBW_Has_150_RP_cost_tt_blocked:0 "§C150§!£research_points_small"
 
+  PB_Orbit_Wars_AI_Manager:0 "AI Tard Wrangler 1"
+  PB_Orbit_Wars_AI_Manager2:0 "AI Tard Wrangler 2"
   PB_Orbit_Wars_Aeronautic_Research:0 "Conduct a run of Aeronautics Research"
   PB_Orbit_Wars_Attack_Enemy_Satellite:0 "Attack Enemy Satellite"
-  PB_Orbit_Wars_Activate_Combat_Satellite:0 "Activate Combat Satellite"
-  PB_Orbit_Wars_Activate_Combat_Satellite_desc:0 "This will activate our current combat satellite in orbit, if we have one active that has not expended its' abilities."
-  PB_Orbit_Wars_Use_Satellite_Ability:0 "Activate Satellite Ability"
-  PB_Orbit_Wars_Use_Satellite_Ability_desc:0 "This will activate our current non-combat satellite in orbit, if we have one active that has not expended its' abilities."
+  PB_Orbit_Wars_Activate_Combat_Satellite_ENG:0 "Activate Combat Satellite"
+  PB_Orbit_Wars_Activate_Combat_Satellite_ENG_desc:0 "This will activate our current combat satellite in orbit, if we have one active that has not expended its' abilities."
+  PB_Orbit_Wars_Activate_Combat_Satellite_RUS:0 "Activate Combat Satellite"
+  PB_Orbit_Wars_Activate_Combat_Satellite_RUS_desc:0 "This will activate our current combat satellite in orbit, if we have one active that has not expended its' abilities."
+  PB_Orbit_Wars_Use_Satellite_Ability_ENG:0 "Activate Satellite Ability"
+  PB_Orbit_Wars_Use_Satellite_Ability_ENG_desc:0 "This will activate our current non-combat satellite in orbit, if we have one active that has not expended its' abilities."
+  PB_Orbit_Wars_Use_Satellite_Ability_RUS:0 "Activate Satellite Ability"
+  PB_Orbit_Wars_Use_Satellite_Ability_RUS_desc:0 "This will activate our current non-combat satellite in orbit, if we have one active that has not expended its' abilities."
   PB_Orbit_Wars_Use_Additional_Fuel:0 "Burn Additional Fuel Reserves"
-  PB_Orbit_Wars_Launch_Rocket:0 "Initiate Launch"
+  PB_Orbit_Wars_Launch_Rocket_ENG:0 "Initiate Launch"
+  PB_Orbit_Wars_Launch_Rocket_RUS:0 "Initiate Launch"
   PB_Orbit_Wars_Reset_Rocket_Design:0 "Reset Rocket Design"
   PB_Orbit_Wars_Hide_All:0 "Hide All Component Sections"
   PB_Orbit_Wars_Satellite_Orbit_Decay:0 "Active Satellite Orbit Decay"
